# comparopt

./: .gitignore  LICENSE  config.example.yaml  pyproject.toml
src/comparopt/: data_extraction.py
tests/: test_data_extraction.py
